--- a/app/styles/sass/Atoms/_body.scss
+++ b/app/styles/sass/Atoms/_body.scss
@@ -2,12 +2,12 @@
 
 $none: none;
 $default: 0px;
-$body-font: helvetica, sans-serif;
+$body-font: georgia, sans-serif;
 $body-font-size: 13px;
-$heading-font-size: 33px;
+$heading-font-size: 23px;
 $bold: bold;
-$body-color: #000;
 $white: #fff;
+$green: #004e5e;
 $full-width: 100%;
 $header-bg: rgba(0,0,0,.6);
 $default-padding: 15px;
@@ -41,15 +41,14 @@ body{
 	-moz-osx-font-smoothing: grayscale;
 	font-family: $body-font;
 	font-size: $body-font-size;
-	background-color: $body-color;
+	background-color: $white;
 	@include box-sizing($none);
 	@include none-select($none);
-	color: $white;
+	color: $green;
 }
 
 h1,h2,h3,h4,p,span,pre,a{
-	padding: 10px;
-}
+	padding: 10px;}
 
 h1{
 	font-size: $heading-font-size;
@@ -58,5 +57,6 @@ h1{
 
 a{
 	text-decoration: $none;
-	cursor: pointer;
+	cursor: pointer;    
+	color: $green;
 }
