--- a/app/styles/sass/style.scss
+++ b/app/styles/sass/style.scss
@@ -1,10 +1,7 @@
 // Screen
 // ======
 
-@import "Components/grids";
 @import "compass/reset";
 @import "breakpoint";
 @import "Atoms/body";
-@import "Components/header";
-@import "Atoms/headlines";
-@import "Molecules/search-box";
+@import "Atoms/tickr";
