--- a/app/styles/sass/style.scss
+++ b/app/styles/sass/style.scss
@@ -1,7 +1,8 @@
 // Screen
 // ======
-
+@import "susy";
 @import "compass/reset";
 @import "breakpoint";
 @import "Atoms/body";
 @import "Atoms/tickr";
+
