--- a/app/styles/css/style.css
+++ b/app/styles/css/style.css
@@ -59,7 +59,7 @@ body {
   -webkit-backface-visibility: hidden;
   -moz-osx-font-smoothing: grayscale;
   font-family: arial, sans-serif;
-  font-size: 13px;
+  font-size: 0.75em;
   background-color: #fff;
   box-sizing: border-box;
   -webkit-user-select: none;
@@ -74,15 +74,15 @@ h1, h2, h3, h4, p, span, pre, a {
 }
 
 h1, h2 {
-  font-size: 15px;
+  font-size: 1.1em;
   font-weight: bold;
   font-family: georgia, sans-serif;
 }
 
 h2 {
-  background: #f2f2f2;
-  height: 30px;
-  line-height: 30px;
+  height: 10px;
+  line-height: 10px;
+  padding: 10px 0;
 }
 
 a {
@@ -97,28 +97,63 @@ p {
 
 .tickr-container {
   position: relative;
-  width: 350px;
-  margin: 0 auto;
+  margin-top: 1.19048%;
+  margin-bottom: 1.19048%;
   padding: 10px 20px 20px;
+  height: 410px;
+  overflow: hidden;
   border: 1px solid #dcdce5;
   border-radius: 2px;
 }
+@media (min-width: 1500px) and (max-width: 2000px) {
+  .tickr-container {
+    box-sizing: border-box;
+    width: 22.22222%;
+    float: left;
+    margin-left: 1.38889%;
+    margin-right: 1.38889%;
+  }
+}
+@media (min-width: 1120px) and (max-width: 1500px) {
+  .tickr-container {
+    box-sizing: border-box;
+    width: 30.55556%;
+    float: left;
+    margin-left: 1.38889%;
+    margin-right: 1.38889%;
+  }
+}
+@media (min-width: 750px) and (max-width: 1120px) {
+  .tickr-container {
+    box-sizing: border-box;
+    width: 47.22222%;
+    float: left;
+    margin-left: 1.38889%;
+    margin-right: 1.38889%;
+  }
+}
+@media (min-width: 300px) and (max-width: 750px) {
+  .tickr-container {
+    box-sizing: border-box;
+    width: 97.22222%;
+    float: left;
+    margin-left: 1.38889%;
+    margin-right: 1.38889%;
+  }
+}
 .tickr-container h3 {
   text-align: right;
-  padding: 10px 0;
+  padding: 10px 0px;
 }
 
 .tickrSlider {
-  width: 100%;
   border: 1px solid #dcdce5;
-  max-width: 348px;
   height: 280px;
   position: relative;
   border-radius: 2px;
 }
 
 .indentifer-container {
-  position: relative;
   margin-top: 5px;
 }
 .indentifer-container :first-child {
@@ -127,23 +162,27 @@ p {
 
 .tickSlider-indentifer {
   margin: 2px;
-  width: 8px;
   border: 1px solid #dcdce5;
   border-radius: 2px;
   display: inline-block;
   -webkit-transition: opacity 1s;
           transition: opacity 1s;
-  line-height: 12px;
+  background-color: #f2f2f2;
+  max-width: 5px;
+  font-size: 0.75em;
+  padding: 7px;
 }
 .tickSlider-indentifer:hover {
-  background-color: #006c81;
-  -webkit-transition: all 0.2s ease-in-out;
-          transition: all 0.2s ease-in-out;
-  color: #fff;
+  background-color: #fff;
+  -webkit-transition: all 0.1s ease-in;
+          transition: all 0.1s ease-in;
 }
 .tickSlider-indentifer p {
   margin: 0px;
   padding: 0px;
+  color: #006c81;
+}
+.tickSlider-indentifer p:hover {
   color: #006c81;
 }
 
@@ -151,7 +190,6 @@ p {
   background-color: #006c81;
   -webkit-transition: opacity 1s;
           transition: opacity 1s;
-  width: 8px;
   border: 1px solid #dcdce5;
 }
 .active p {
@@ -159,10 +197,14 @@ p {
 }
 
 .tickrSlider-inner {
-  position: relative;
-  width: 348px;
-  height: 280px;
   cursor: pointer;
+  overflow: hidden;
+}
+
+.tickrSlider-top {
+  background: #f2f2f2;
+  display: inline-block;
+  width: 100%;
 }
 
 .tickrSlider-slide {
@@ -171,6 +213,8 @@ p {
   top: 0;
   -webkit-transition: opacity 1s;
           transition: opacity 1s;
+  width: 100%;
+  height: 100%;
 }
 
 .job-active {
@@ -180,10 +224,11 @@ p {
 .tickrSlide-info {
   z-index: 800;
   position: absolute;
-  bottom: 10px;
+  bottom: 6px;
   border: 1px solid #dcdce5;
-  right: 15px;
+  right: 6px;
   width: 45px;
+  text-align: center;
   color: #fff;
   background-color: #006c81;
   border-radius: 5px;
@@ -195,4 +240,9 @@ p {
   -webkit-transition: all 0.1s ease-in-out;
           transition: all 0.1s ease-in-out;
   color: #006c81;
+}
+
+.placeholder {
+  background: #f2f2f2;
+  height: 350px;
 }
