--- a/app/styles/sass/style.scss
+++ b/app/styles/sass/style.scss
@@ -3,6 +3,6 @@
 @import "susy";
 @import "compass/reset";
 @import "breakpoint";
-@import "Atoms/body";
-@import "Atoms/tickr";
+@import "atoms/body";
+@import "atoms/tickr";
 
