--- a/app/styles/css/style.css
+++ b/app/styles/css/style.css
@@ -54,6 +54,20 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
+/*@mixin widget-slider-btn($default){
+	position: absolute;
+	width: 45px;
+	text-align: $center;
+	color: $white;
+	background-color: rgba(0, 0, 0, 0.6);
+	transition: all 0.1s ease-in-out;
+	font-weight: 900;
+	&:hover{
+		background-color: $white;
+		transition: all 0.1s ease-in-out;
+		color: $green;
+	}
+}*/
 body {
   -webkit-font-smoothing: antialiased;
   -webkit-backface-visibility: hidden;
@@ -66,17 +80,22 @@ body {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  color: #006c81;
+  color: #fff;
 }
 
 h1, h2, h3, h4, p, span, pre, a {
   padding: 10px;
 }
 
+h1, h3 {
+  color: #006c81;
+}
+
 h1, h2 {
-  font-size: 1.1em;
+  font-size: 1.2em;
   font-weight: bold;
   font-family: georgia, sans-serif;
+  color: #fff;
 }
 
 h2 {
@@ -92,20 +111,20 @@ a {
 }
 
 p {
-  color: #333;
+  color: #fff;
+  padding: 0px;
 }
 
 .tickr-container {
   position: relative;
   margin-top: 1.19048%;
   margin-bottom: 1.19048%;
-  padding: 10px 20px 20px;
-  height: 410px;
+  height: 300px;
   overflow: hidden;
   border: 1px solid #dcdce5;
   border-radius: 2px;
 }
-@media (min-width: 1500px) and (max-width: 2000px) {
+@media (min-width: 1500px) and (max-width: 2500px) {
   .tickr-container {
     box-sizing: border-box;
     width: 22.22222%;
@@ -139,6 +158,7 @@ p {
     float: left;
     margin-left: 1.38889%;
     margin-right: 1.38889%;
+    padding: 0;
   }
 }
 .tickr-container h3 {
@@ -148,34 +168,44 @@ p {
 
 .tickrSlider {
   border: 1px solid #dcdce5;
-  height: 280px;
-  position: relative;
   border-radius: 2px;
 }
 
 .indentifer-container {
-  margin-top: 5px;
+  position: absolute;
+  z-index: 99;
+  bottom: 0px;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.6);
+  padding: 10px 0;
+  width: 100%;
+  text-align: center;
 }
 .indentifer-container :first-child {
   margin-left: 0px;
 }
 
+.tickrSlider-img {
+  width: 100%;
+  position: absolute;
+  top: 0;
+}
+
 .tickSlider-indentifer {
   margin: 2px;
-  border: 1px solid #dcdce5;
-  border-radius: 2px;
+  border-radius: 65px;
   display: inline-block;
   -webkit-transition: opacity 1s;
           transition: opacity 1s;
-  background-color: #f2f2f2;
+  background: rgba(0, 0, 0, 0.3);
   max-width: 5px;
   font-size: 0.75em;
   padding: 7px;
 }
 .tickSlider-indentifer:hover {
-  background-color: #fff;
   -webkit-transition: all 0.1s ease-in;
           transition: all 0.1s ease-in;
+  color: #006c81;
 }
 .tickSlider-indentifer p {
   margin: 0px;
@@ -187,10 +217,9 @@ p {
 }
 
 .active {
-  background-color: #006c81;
+  background: rgba(0, 0, 0, 0.9);
   -webkit-transition: opacity 1s;
           transition: opacity 1s;
-  border: 1px solid #dcdce5;
 }
 .active p {
   color: #fff;
@@ -202,15 +231,18 @@ p {
 }
 
 .tickrSlider-top {
-  background: #f2f2f2;
+  background: rgba(0, 0, 0, 0.6);
   display: inline-block;
   width: 100%;
+  position: relative;
+  z-index: 99;
 }
 
 .tickrSlider-slide {
   opacity: 0;
   position: absolute;
   top: 0;
+  left: 0;
   -webkit-transition: opacity 1s;
           transition: opacity 1s;
   width: 100%;
@@ -219,27 +251,6 @@ p {
 
 .job-active {
   opacity: 1;
-}
-
-.tickrSlide-info {
-  z-index: 800;
-  position: absolute;
-  bottom: 6px;
-  border: 1px solid #dcdce5;
-  right: 6px;
-  width: 45px;
-  text-align: center;
-  color: #fff;
-  background-color: #006c81;
-  border-radius: 5px;
-  -webkit-transition: all 0.1s ease-in-out;
-          transition: all 0.1s ease-in-out;
-}
-.tickrSlide-info:hover {
-  background-color: #fff;
-  -webkit-transition: all 0.1s ease-in-out;
-          transition: all 0.1s ease-in-out;
-  color: #006c81;
 }
 
 .placeholder {
